--- a/product-card-only/assets/scss/styles.scss
+++ b/product-card-only/assets/scss/styles.scss
@@ -63,20 +63,72 @@ main {
   overflow-y: hidden;
 
   &__img {
+    position: absolute;
+    width: 260px;
+    filter: drop-shadow(5px 10px 15px rgba(8, 9, 13, 0.4));
   }
   &__data {
+    transform: translateY(13.2rem);
+    text-align: center;
   }
   &__title {
+    font-size: var(--h1-font-size);
+    color: var(--first-color);
+    margin-bottom: 0.5rem;
   }
   &__price {
+    display: inline-block;
+    font-size: var(--h2-font-size);
+    font-weight: 500;
+    margin-bottom: 3.25rem;
   }
   &__description {
+    font-size: var(--small-font-size);
+    text-align: initial;
+    margin-bottom: 1.25rem;
   }
   &__button {
+    display: block;
+    width: max-content;
+    padding: 1.125rem 2rem;
+    background-color: var(--first-color);
+    color: var(--white-color);
+    border-radius: 0.5rem;
+    font-weight: 600;
+    transition: 0.2s;
+    opacity: 0;
     &:hover {
+      box-shadow: 0 18px 40px -12px rgba(242, 162, 12, 0.35);
     }
+  }
+
+  &__img,
+  &__data,
+  &__title,
+  &__price,
+  &__description {
+    transition: 0.3s;
   }
 }
 
 .card:hover {
+  .card__img {
+    transform: translate(-1.5rem, -9.5rem) rotate(-20deg);
+  }
+  .card__data {
+    transform: translateY(4.8rem);
+  }
+  .card__title {
+    transform: translateX(-2.3rem);
+    margin-bottom: 0;
+  }
+  .card__price {
+    transform: translateX(-6.8rem);
+    margin-bottom: 1.25rem;
+  }
+  .card__description,
+  .card__button {
+    transition-delay: 0.2s;
+    opacity: 1;
+  }
 }
